apps/idse/overlays/aws-us-west-2-cc-smarsh-perf/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-idse-perf
spec:
  hosts:
    - "idse.cc-perf.internal.smarsh.us-west-2.aws.smarsh.cloud"
  gateways:
    - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-cc-perf
  http:
    - route:
        - destination:
            host: idse
      match:
      - uri:
          prefix: "/"
